--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,18 +1,6 @@
 spring:
   profiles:
     active: dev
-  datasource:
-      url: jdbc:h2:mem:testdb;DB_CLOSE_ON_EXIT=FALSE
-      driverClassName: org.h2.Driver
-      username: sa
-      password:
-  jpa:
-    database-platform: org.hibernate.dialect.H2Dialect
-    show-sql: true
-  h2:
-    console:
-      enabled: true
-      path: /h2-console
-  jackson:
-    serialization:
-      write_dates_as_timestamps: false
+
+logging:
+  file: logs/spring-boot-workshop-dev-profile.log
