--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -2,7 +2,7 @@ spring:
   profiles:
     active: dev
   datasource:
-      url: jdbc:h2:mem:prod-db;
+      url: jdbc:h2:mem:prod-db
       driverClassName: org.h2.Driver
       username: produser
       password: prodpass
@@ -14,8 +14,3 @@ spring:
     console:
       enabled: false
       path: /h2-console
-  jackson:
-    serialization:
-      write_dates_as_timestamps: false
-app:
-    timezone: UTC
